--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,10 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden; 
   background: linear-gradient(
       to bottom,
       transparent,
