--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -29,39 +29,7 @@
 }
 
 
-@media (max-width: 1024px) {
-    .main-container {
-        display: grid;
-        grid-template-rows: auto auto;
-        grid-template-columns: 1fr;
-        grid-row-gap: 100px;
-        margin-top: -100px;
-        margin-right: 45px;
-    }
-
-    .main-container> :first-child {
-        order: 2;
-    }
-
-    .main-container> :last-child {
-        grid-row: 1;
-    }
-
-    .logo img {
-        width: 50%;
-    }
-
-    .logo-0 {
-        left: 100px;
-        top: 50px;
-    }
-
-    .logo-1 {
-        left: 200px;
-        top: 150px;
-    }
-
-}
+@media (max-width: 1024px) {}
 
 @media (max-width: 768px) {
     .main-container {
@@ -70,7 +38,7 @@
         grid-template-columns: 1fr;
         grid-row-gap: 100px;
         margin-top: -100px;
-        margin-right: 45px;
+        margin-right: 48px;
     }
 
     .main-container> :first-child {
