--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -32,13 +32,18 @@
 @media (max-width: 1024px) {}
 
 @media (max-width: 768px) {
+    .devimage {
+        display: none;
+    }
+
     .main-container {
         display: grid;
         grid-template-rows: auto auto;
         grid-template-columns: 1fr;
         grid-row-gap: 100px;
         margin-top: -100px;
-        margin-right: 48px;
+        margin-right: 0px;
+        margin-left: 85px;
     }
 
     .main-container> :first-child {
@@ -53,11 +58,19 @@
         width: 50%;
     }
 
+    .parthimage {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        border: 4px solid #00ABF0;
+    }
+
     .devimage-container {
         display: flex;
-        direction: column;
+        flex-direction: column;
     }
 }
+
 
 
 @media (max-width: 480px) {}
