--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -29,7 +29,33 @@
 }
 
 
-@media (max-width: 1024px) {}
+@media (max-width: 953px) {
+    .devimage {
+        display: none;
+    }
+
+    .name{
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .tagline{
+        width:max-content;
+        margin: 0 auto;
+    }
+  
+    .parthimage {
+        width: 80%;
+        border-radius: 50%;
+        border: 4px solid #00ABF0;
+        margin: 0 auto;
+    }
+
+    .main-container {
+        display: grid;
+        gap: 50px;
+    }
+}
 
 @media (max-width: 768px) {
     .devimage {
