--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -34,12 +34,13 @@
     }
 
     .name {
-        width: 70%;
-        margin: 0 auto;
+        width: max-content;
+        margin: 0 auto 10px;
     }
 
     .tagline {
         width: max-content;
+        font-size: 1.5rem;
         margin: 0 auto;
     }
 
@@ -48,6 +49,13 @@
         border-radius: 50%;
         border: 4px solid #00ABF0;
         margin: 0 auto;
+    }
+
+    .paragraph {
+        font-size: 0.9rem;
+        margin: 20px auto 20px;
+        width: 100%;
+
     }
 
     .main-container {
@@ -80,7 +88,7 @@
     }
 
     .name {
-        width: 40%;
+        width: max-content;
         margin: 0 auto 10px;
     }
 
