--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -7,6 +7,20 @@
     opacity: 0.4;
 }
 
+.name {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #00ABF0;
+    margin: 0 0 10px;
+}
+
+.paragraph {
+    font-size: 1rem;
+    margin: 0 auto;
+    width: 60%;
+
+}
+
 @keyframes reveal {
     0% {
         opacity: 0;
@@ -54,7 +68,7 @@
     .paragraph {
         font-size: 0.9rem;
         margin: 20px auto 20px;
-        width: 100%;
+        width: 55%;
 
     }
 
