--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,10 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  width: 100%;
+  width: 100vh;
   height: 100vh;
   overflow-x: hidden;
-  overflow-y: hidden; 
+  overflow-y: auto; 
   background: linear-gradient(
       to bottom,
       transparent,
