--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -50,7 +50,7 @@
     }
 
     .parthimage {
-        width: 80%;
+        width: 50%;
         border-radius: 50%;
         border: 4px solid #00ABF0;
         margin: 0 auto;
@@ -71,11 +71,21 @@
         display: grid;
         grid-template-rows: auto auto;
         grid-template-columns: 1fr;
-        grid-row-gap: 100px;
-        margin-top: -100px;
+        grid-row-gap: 7cap;
+        margin-top: 30px;
         margin-right: 0px;
         margin-left: 85px;
         height: max-content;
+    }
+
+    .name {
+        width: 28%;
+        margin: 0 auto 20px auto;
+    }
+
+    .tagline {
+        width: max-content;
+        margin: 0 auto 20px auto;
     }
 
     .main-container> :first-child {
@@ -91,8 +101,7 @@
     }
 
     .parthimage {
-        width: 100%;
-        height: 100%;
+        width: 80%;
         border-radius: 50%;
         border: 4px solid #00ABF0;
     }
@@ -110,7 +119,8 @@
 
     .main-container {
         grid-row-gap: 80px;
-        margin: 0 auto 0 90px;
+        width: full-width;
+        margin: 0 auto 0 50px;
         height: max-content;
     }
 
