--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,17 +16,18 @@
   }
 }
 
+html,
+body {
+  margin: 0 auto;
+  height: 100%;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   width: 100%;
-
-  overflow-y: hidden; 
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
