--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@ body {
 body {
   color: rgb(var(--foreground-rgb));
   width: 100%;
+  overflow-y: hidden !important;
   background: linear-gradient(to bottom,
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
