--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,9 +26,8 @@ body {
   color: rgb(var(--foreground-rgb));
   width: 100%;
   overflow-y: hidden !important;
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom, rgb(var(--background-start-rgb)),
+      rgb(var(--background-end-rgb)));
 }
 
 @layer utilities {
