--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -2,6 +2,8 @@
     height: 100%;
     width: 100%;
     padding: 20px;
+    height: max-content;
+    overflow-y: scroll;
     box-sizing: border-box;
 }
 
