--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,18 +16,18 @@
   }
 }
 
+html,
+body {
+  margin: 0 auto;
+  height: auto;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
-  width: 100vh;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto; 
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  width: 100%;
+  overflow-y: hidden !important;
+  background: linear-gradient(to bottom, rgb(var(--background-start-rgb)),
+      rgb(var(--background-end-rgb)));
 }
 
 @layer utilities {
