--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -1,9 +1,10 @@
+.body {
+    
+}
+
 .about-container {
     height: 100%;
     width: 100%;
-    padding: 20px;
-    height: max-content;
-    overflow-y: scroll;
     box-sizing: border-box;
 }
 
@@ -11,6 +12,8 @@
     max-width: 1000px;
     margin: 0 auto;
     animation: slideInFromLeft 1.5s ease-in-out;
+    max-height: 650px;
+    overflow-y: auto;
 }
 
 .about-content.visible {
