--- a/src/app/component/header.css
+++ b/src/app/component/header.css
@@ -25,6 +25,24 @@
     z-index: 1000;
 }
 
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.blinking {
+    animation: blink 1s linear infinite;
+}
+
 .accessibility-controller:hover {
     transform: scale(1.1);
     box-shadow:
