--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -123,11 +123,41 @@ svg {
     .grid-container {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .about-content {
+        max-width: 500px;
+        margin: 0 auto;
+        animation: slideInFromLeft 1.5s ease-in-out;
+        max-height: 650px;
+        overflow-y: auto;
+    }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 982px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .about-content {
+        max-width: 700px;
+        margin: 0 auto;
+        animation: slideInFromLeft 1.5s ease-in-out;
+        max-height: 650px;
+        overflow-y: auto;
+    }
+}
+
+@media (max-width: 1024px) {
     .grid-container {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    .about-content {
+        max-width: 500px;
+        margin: 0 auto;
+        animation: slideInFromLeft 1.5s ease-in-out;
+        max-height: 650px;
+        overflow-y: auto;
     }
 }
 
