--- a/src/app/component/header.css
+++ b/src/app/component/header.css
@@ -92,3 +92,22 @@
 .link-contact {
     transform: translate(40px, 30px);
 }
+
+@media (max-width: 982px) {
+ 
+}
+
+@media (min-width: 982px) {
+  
+}
+
+@media (min-width: 1024px) {
+ 
+}
+
+@media (min-width: 1440px) {
+    .contact{
+         margin-right: 1220px;
+    }
+
+}
