--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -119,68 +119,13 @@ svg {
     margin-bottom: 15px;
 }
 
-@media (min-width: 768px) {
-    .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .about-content {
-        max-width: 500px;
-        margin: 0 auto;
-        animation: slideInFromLeft 1.5s ease-in-out;
-        max-height: 650px;
-        overflow-y: auto;
-    }
-}
-
-@media (max-width: 982px) {
-    .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .about-content {
-        max-width: 750px;
-        margin: 0 auto;
-        animation: slideInFromLeft 1.5s ease-in-out;
-        max-height: 750px;
-        overflow-y: auto;
-    }
-}
-
-@media (min-width: 982px) {
-    .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .about-content {
-        max-width: 750px;
-        margin: 0 auto;
-        animation: slideInFromLeft 1.5s ease-in-out;
-        max-height: 750px;
-        overflow-y: auto;
-    }
-}
-
-@media (min-width: 1024px) {
-    .grid-container {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    .about-content {
-        max-width: 900px;
-        margin: 0 auto;
-        animation: slideInFromLeft 1.5s ease-in-out;
-        max-height: 650px;
-        overflow-y: auto;
-    }
-}
-
-@media (min-width: 1440px) {
+/* Styles for screens larger than 1440px */
+@media (min-width: 1441px) {
     .grid-container {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto auto;
     }
-    
+
     .about-content {
         max-width: 1150px;
         margin: 0 auto;
@@ -203,5 +148,50 @@ svg {
     .achievements h3,
     .primary-interest h3 {
         margin-bottom: 10px;
+    }
+}
+
+/* Styles for screens between 1025px and 1440px */
+@media (min-width: 1025px) and (max-width: 1440px) {
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .about-content {
+        max-width: 900px;
+        margin: 0 auto;
+        animation: slideInFromLeft 1.5s ease-in-out;
+        max-height: 650px;
+        overflow-y: auto;
+    }
+}
+
+/* Styles for screens between 769px and 1024px */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .about-content {
+        max-width: 900px;
+        margin: 0 auto;
+        animation: slideInFromLeft 1.5s ease-in-out;
+        max-height: 650px;
+        overflow-y: auto;
+    }
+}
+
+/* Styles for screens up to 768px */
+@media (max-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .about-content {
+        max-width: 500px;
+        margin: 0 auto;
+        animation: slideInFromLeft 1.5s ease-in-out;
+        max-height: 650px;
+        overflow-y: auto;
     }
 }
