--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -39,38 +39,32 @@ body {
     animation: reveal 3s infinite;
 }
 
-
 @media (max-width: 953px) {
     .devimage {
         display: none;
     }
 
-  homepage
-    .name {
- 
-    .name{
-  main
+    .homepage .name {
         width: 70%;
         margin: 0 auto;
     }
 
-  homepage
-    .tagline {
+    .homepage .tagline {
         width: max-content;
         margin: 0 auto;
     }
 
     .parthimage {
         width: 50%;
- 
-    .tagline{
-        width:max-content;
+    }
+
+    .tagline {
+        width: max-content;
         margin: 0 auto;
     }
-  
+
     .parthimage {
         width: 80%;
-  main
         border-radius: 50%;
         border: 4px solid #00ABF0;
         margin: 0 auto;
@@ -86,22 +80,18 @@ body {
     .devimage {
         display: none;
     }
-  homepage
-   
-    .body {
+
+    .homepage .body {
         height: 100vh;
     }
- 
-  main
 
     .main-container {
         display: grid;
         grid-template-rows: auto auto;
         grid-template-columns: 1fr;
- homepage
         grid-row-gap: 50px;
         margin-top: 30px;
-        margin-right: 0px;
+        margin-right: 0;
         margin-left: 85px;
         height: max-content;
     }
@@ -114,12 +104,6 @@ body {
     .tagline {
         width: max-content;
         margin: 0 auto 10px auto;
-
-        grid-row-gap: 100px;
-        margin-top: -100px;
-        margin-right: 0px;
-        margin-left: 85px;
- main
     }
 
     .main-container> :first-child {
@@ -135,12 +119,8 @@ body {
     }
 
     .parthimage {
- homepage
-        width: 80%;
- 
         width: 100%;
         height: 100%;
- main
         border-radius: 50%;
         border: 4px solid #00ABF0;
     }
@@ -156,13 +136,13 @@ body {
         display: none;
     }
 
-    .main{
+    .main {
         height: 100vh;
     }
 
     .main-container {
         grid-row-gap: 80px;
-        width: full-width;
+        width: 100%;
         margin: 0 auto 0 50px;
     }
 
@@ -184,8 +164,6 @@ body {
         margin: 0 auto;
     }
 
-
- homepage
     .logo img {
         width: 50%;
     }
@@ -202,6 +180,3 @@ body {
         flex-direction: column;
     }
 }
- 
-@media (max-width: 480px) {}
-  main
