--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -2,7 +2,6 @@
     height: 100%;
     width: 100%;
     box-sizing: border-box;
-    padding: 20px;
 }
 
 .about-content {
@@ -11,7 +10,6 @@
     animation: slideInFromLeft 1.5s ease-in-out;
     max-height: 650px;
     overflow-y: auto;
-    padding: 30px;
 }
 
 .about-content.visible {
@@ -24,7 +22,6 @@
         transform: translateX(-100%);
         opacity: 0;
     }
-
     100% {
         transform: translateX(0);
         opacity: 1;
@@ -121,7 +118,6 @@ svg {
     margin-bottom: 15px;
 }
 
-/* Styles for screens larger than 1440px */
 @media (min-width: 1441px) {
     .grid-container {
         grid-template-columns: repeat(3, 1fr);
@@ -130,15 +126,18 @@ svg {
 
     .about-content {
         max-width: 1150px;
-        margin: 0 auto;
-        animation: slideInFromLeft 1.5s ease-in-out;
         max-height: 750px;
-        overflow-y: auto;
+    }
+}
+
+@media (max-width: 982px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .achievements,
     .primary-interest {
-        grid-column: span 3;
+        grid-column: span 2;
         background-color: #00ABF0;
         padding: 20px;
         border-radius: 10px;
@@ -147,13 +146,17 @@ svg {
         text-align: center;
     }
 
+    .about-content {
+        max-width: 750px;
+        max-height: 750px;
+    }
+
     .achievements h3,
     .primary-interest h3 {
         margin-bottom: 10px;
     }
 }
 
-/* Styles for screens between 1025px and 1440px */
 @media (min-width: 1025px) and (max-width: 1440px) {
     .grid-container {
         grid-template-columns: repeat(3, 1fr);
@@ -161,30 +164,16 @@ svg {
 
     .about-content {
         max-width: 900px;
-        
-        margin: 0 auto;
-        animation: slideInFromLeft 1.5s ease-in-out;
         max-height: 650px;
-        overflow-y: auto;
     }
 }
 
-/* Styles for screens between 769px and 1024px */
 @media (min-width: 769px) and (max-width: 1024px) {
     .grid-container {
         grid-template-columns: repeat(3, 1fr);
     }
-
-    .about-content {
-        max-width: 900px;
-        margin: 0 auto;
-        animation: slideInFromLeft 1.5s ease-in-out;
-        max-height: 650px;
-        overflow-y: auto;
-    }
 }
 
-/* Styles for screens up to 768px */
 @media (max-width: 768px) {
     .grid-container {
         grid-template-columns: repeat(2, 1fr);
@@ -192,9 +181,6 @@ svg {
 
     .about-content {
         max-width: 500px;
-        margin: 0 auto;
-        animation: slideInFromLeft 1.5s ease-in-out;
         max-height: 650px;
-        overflow-y: auto;
     }
 }
