--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -10,6 +10,7 @@
     animation: slideInFromLeft 1.5s ease-in-out;
     max-height: 650px;
     overflow-y: auto;
+    scrollbar-width: none;
 }
 
 .about-content.visible {
@@ -22,6 +23,7 @@
         transform: translateX(-100%);
         opacity: 0;
     }
+
     100% {
         transform: translateX(0);
         opacity: 1;
@@ -157,13 +159,13 @@ svg {
     }
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) and (max-width: 1540px) {
     .grid-container {
         grid-template-columns: repeat(3, 1fr);
     }
 
     .about-content {
-        max-width: 900px;
+        max-width: 1100px;
         max-height: 650px;
     }
 }
@@ -180,7 +182,8 @@ svg {
     }
 
     .about-content {
-        max-width: 500px;
+        padding: 35px;
+        max-width: 600px;
         max-height: 650px;
     }
 }
