--- a/src/app/component/header.css
+++ b/src/app/component/header.css
@@ -1,8 +1,4 @@
-@media (max-width: 768px) {
-    .navbar {
-        display: none !important;
-    }
-}
+ 
 
 .accessibility-controller {
     width: 0.5cm;
@@ -95,12 +91,63 @@
     transform: translate(40px, 30px);
 }
 
-@media (min-width: 1024px) {}
 
-@media (min-width: 1440px) {
-
-    .contact {
-        margin-right: 230px;
+@media (min-width: 1441px) {
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto auto;
     }
 
+    .about-content {
+        max-width: 1150px;
+        max-height: 750px;
+    }
+}
+
+@media (max-width: 982px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .achievements,
+    .primary-interest {
+        grid-column: span 2;
+        background-color: #00ABF0;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        color: #fff;
+        text-align: center;
+    }
+
+    .about-content {
+        max-width: 750px;
+        max-height: 750px;
+    }
+
+    .achievements h3,
+    .primary-interest h3 {
+        margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1540px) {
+     
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    
+}
+
+@media (max-width: 768px) {
+    .logo{
+        margin-left: 20px;
+    }
+    .contact{
+        margin-right: 20px;
+    }
+
+    .navbar {
+        display: none !important;
+    }
 }
