--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -68,11 +68,15 @@
 }
 
 .skills {
+    list-style-position: inside; 
+    padding-left: 0; 
+    margin-left: 0; 
+}
+
+.skills li {
     margin: 0;
-    padding: 0;
-    list-style: none;
-    color: #fff;
-    font-size: 16px;
+    padding-left: 1.5rem;
+    text-align: left;
 }
 
 .otherDiv,
