--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -27,7 +27,10 @@
 }
 
 .educationDiv {
-    width: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    width: max-content;
     height: max-content;
     color: rgb(127, 127, 127);
 }
