--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -1,7 +1,9 @@
 .about-container {
     height: 100%;
     width: 100%;
+    margin-top: 50px;
     box-sizing: border-box;
+
 }
 
 .about-content {
@@ -32,25 +34,25 @@
     gap: 30px;
     width: max-content;
     height: max-content;
-    color: rgb(127, 127, 127);
+    color: rgb(165, 165, 165);
 }
 
 .educationDiv h2 {
-    color: rgb(127, 127, 127);
+    color: rgb(165, 165, 165);
 }
 
 .achievementDiv {
-    color: rgb(127, 127, 127);
+    color: rgb(165, 165, 165);
 }
 
 .achievementDiv h2 {
-    color: rgb(127, 127, 127);
+    color: rgb(165, 165, 165);
 }
 
 .achievements {
     display: flex;
     width: max-content;
-    animation: scroll 10s linear infinite;
+    /* animation: scroll 10s linear infinite; */
 }
 
 .achievementCard {
@@ -62,8 +64,8 @@
     padding: 15px;
     margin: 0 10px;
     text-align: left;
-    color: rgb(127, 127, 127);
-    box-shadow: 0 4px 6px rgba(255, 253, 253, 0.1);
+    color: rgb(165, 165, 165);
+    box-shadow: 0 6px 10px rgba(255, 253, 253, 0.1);
 }
 
 .achievementTitle {
@@ -263,5 +265,66 @@ svg {
         padding: 35px;
         max-width: 600px;
         max-height: 650px;
+    }
+
+    .educationDiv {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 30px;
+        width: max-content;
+        height: max-content;
+        color: rgb(165, 165, 165);
+    }
+
+    .educationDiv h2 {
+        color: rgb(165, 165, 165);
+    }
+
+    .ed1 {
+        margin-bottom: -22px;
+        width: 94%;
+    }
+
+    .ed2{
+        width: 94%;
+    }
+
+    .achievementDiv {
+        color: rgb(165, 165, 165);
+    }
+
+    .achievementDiv h2 {
+        color: rgb(165, 165, 165);
+    }
+
+    .achievements {
+        display: flex;
+        width: max-content;
+        /* animation: scroll 10s linear infinite; */
+    }
+
+    .achievementCard {
+        border: 1px solid #00ABF0;
+    }
+
+    .achievementTitle {
+        font-size: 1em;
+        font-weight: bold;
+        margin-bottom: 8px;
+    }
+
+    .achievementDetails {
+        font-size: 0.8em;
+        line-height: 1.4;
+    }
+
+    @keyframes scroll {
+        0% {
+            transform: translateX(0);
+        }
+
+        100% {
+            transform: translateX(-100%);
+        }
     }
 }
