--- a/src/app/avocations/avocation.css
+++ b/src/app/avocations/avocation.css
@@ -43,9 +43,9 @@
 .scroll-line {
     position: absolute;
     width: 100%;
-    height: 200%; /* Make the height double for continuous scroll */
+    height: 200%;
     background: linear-gradient(to bottom, #000 50%, transparent 100%);
-    background-size: 100% 50px; /* Control the spacing between the lines */
+    background-size: 100% 50px;
     animation: scroll-animation 2s linear infinite;
 }
 
