--- a/src/app/avocations/avocation.css
+++ b/src/app/avocations/avocation.css
@@ -43,18 +43,17 @@
 .scroll-line {
     position: absolute;
     width: 100%;
-    height: 200%;
+    height: 0;
     background: linear-gradient(to bottom, #000 50%, transparent 100%);
-    background-size: 100% 50px;
-    animation: scroll-animation 2s linear infinite;
+    animation: scroll-animation 2s linear infinite forwards; /* Use forwards to retain the final state */
 }
 
 @keyframes scroll-animation {
     0% {
-        transform: translateY(0);
+        width: 0;
     }
     100% {
-        transform: translateY(-50%);
+        width: 100%;
     }
 }
 
