--- a/src/app/avocations/avocation.css
+++ b/src/app/avocations/avocation.css
@@ -1,3 +1,11 @@
+.grid {
+    height: 80vh;
+    display: grid;
+    grid-template-columns: 45% 45% 5%;
+    gap: 4%;
+    align-items: stretch;
+}
+
 .single-image-container {
     position: relative;
     width: 100%;
@@ -6,27 +14,30 @@
 }
 
 .avocation-image {
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 80%;
     object-fit: cover;
     display: block;
+    margin: 0 auto;
 }
 
 .info-container {
     display: grid;
     gap: 10px;
+    height: 100%;
 }
 
 .avocation-wrapper {
     width: fit-content;
     margin: 0 auto;
+    height: 100%;
 }
 
 .shining-line {
     display: block;
     width: 100%;
     height: 4px;
-    background: linear-gradient(90deg, rgba(255,0,150,0.7), rgba(0,204,255,0.7));
+    background: linear-gradient(90deg, rgba(255, 0, 150, 0.7), rgba(0, 204, 255, 0.7));
     background-size: 300% 300%;
     animation: shine 5s linear infinite;
     border-radius: 2px;
@@ -35,36 +46,38 @@
 
 .scrol {
     position: relative;
-    width: 2px; 
-    height: 100vh;  
+    width: 2px;
+    height: 70vh;
     overflow: hidden;
 }
 
 .scroll-line {
     position: absolute;
-    width: 100%;
+    width: 2px;
     height: 0;
     background: linear-gradient(to bottom, #000 50%, transparent 100%);
-    animation: scroll-animation 2s linear infinite forwards; /* Use forwards to retain the final state */
+    animation: scroll-animation 1.8s linear infinite forwards;
 }
 
 @keyframes scroll-animation {
     0% {
-        width: 0;
+        height: 0;
     }
+
     100% {
-        width: 100%;
+        height: 70%;
     }
 }
-
 
 @keyframes shine {
     0% {
         background-position: 0% 50%;
     }
+
     50% {
         background-position: 100% 50%;
     }
+
     100% {
         background-position: 0% 50%;
     }
