--- a/src/app/avocations/avocation.css
+++ b/src/app/avocations/avocation.css
@@ -26,6 +26,7 @@
     gap: 10px;
     height: 70vh;
     overflow-y: auto;
+    position: relative;
 }
 
 .avocation-wrapper {
@@ -64,6 +65,7 @@
     0% {
         height: 0;
     }
+
     100% {
         height: 70%;
     }
@@ -73,9 +75,11 @@
     0% {
         background-position: 0% 50%;
     }
+
     50% {
         background-position: 100% 50%;
     }
+
     100% {
         background-position: 0% 50%;
     }
