--- a/src/app/avocations/avocation.css
+++ b/src/app/avocations/avocation.css
@@ -49,7 +49,7 @@
 .scrol {
     position: relative;
     width: 2px;
-    height: 70vh;
+    height: 61vh;
     overflow: hidden;
 }
 
@@ -57,8 +57,8 @@
     position: absolute;
     width: 2px;
     height: 0;
-    background: linear-gradient(to bottom, #000 50%, transparent 100%);
-    animation: scroll-animation 1.8s linear infinite forwards;
+    background: linear-gradient(to bottom, #122bca 40%, transparent 100%);
+    animation: scroll-animation 1.3s linear infinite forwards;
 }
 
 @keyframes scroll-animation {
@@ -82,5 +82,62 @@
 
     100% {
         background-position: 0% 50%;
+    }
+}
+
+/* Extra Large screens (desktops, 1400px and above) */
+@media (min-width: 1400px) {
+    .grid {
+        grid-template-columns: 45% 45% 5%;
+    }
+    .avocation-image {
+        width: 100vh;
+        height: 45vh;
+    }
+    .info-container {
+        height: 45vh;
+    }
+}
+
+/* Large screens (desktops, between 1200px and 1399px) */
+@media (max-width: 1399px) and (min-width: 1200px) {
+    .grid {
+        grid-template-columns: 50% 45%;
+    }
+    .avocation-image {
+        width: 90vh;
+        height: 40vh;
+    }
+    .info-container {
+        height: 40vh;
+    }
+}
+
+/* Medium screens (tablets, between 768px and 1199px) */
+@media (max-width: 1199px) and (min-width: 768px) {
+    .grid {
+        grid-template-columns: 100%;
+    }
+    .avocation-image {
+        width: 85%;
+        height: 35vh;
+    }
+    .info-container {
+        height: 35vh;
+    }
+}
+
+/* Small screens (phones, below 768px) */
+@media (max-width: 767px) {
+    .grid {
+        grid-template-columns: 100%;
+        gap: 2%;
+    }
+    .avocation-image {
+        width: 100%;
+        height: 30vh;
+    }
+    .info-container {
+        height: 30vh;
     }
 }
