--- a/src/app/avocations/avocation.css
+++ b/src/app/avocations/avocation.css
@@ -25,6 +25,7 @@
     display: grid;
     gap: 10px;
     height: 80vh;
+    width: max-content;
     overflow-y: auto;
     position: relative;
 }
@@ -40,7 +41,7 @@
 .shining-line {
     display: block;
     width: 100%;
-    height: 4px;
+    height: 3px;
     background: linear-gradient(90deg, rgba(255, 0, 150, 0.7), rgba(0, 204, 255, 0.7));
     background-size: 300% 300%;
     animation: shine 5s linear infinite;
@@ -101,6 +102,10 @@
         margin: 0 auto;
         height: 60vh;
         width: 80vh;
+    }
+
+    .shining-line {
+        width: 51vh;
     }
 }
 
