Avocaitons header have been updated

--- a/src/app/component/avocationComp.css
+++ b/src/app/component/avocationComp.css
@@ -1,8 +1,11 @@
-.header{
- 
+.header h3 {
+    font-size: 1.5em;
+    font-family: '';
+    font-weight: bold;
+    color: #6f6565;
 }
 
-.description{
+.description {
      
 }
 
@@ -18,12 +21,14 @@
 
 /* Medium screens (tablets, between 768px and 1199px) */
 @media (max-width: 1199px) and (min-width: 768px) {
-   
+    
 }
 
 /* Small screens (phones, below 768px) */
 @media (max-width: 767px) {
     .avocationBox {
         width: 40vh;
-        height: 20vh;}
+        height: 20vh;
+        margin: 0 auto;
+    }
 }
