--- a/src/app/component/avocationComp.css
+++ b/src/app/component/avocationComp.css
@@ -14,14 +14,14 @@
 
 }
 
-
 /* Medium screens (tablets, between 768px and 1199px) */
 @media (max-width: 1199px) and (min-width: 768px) {
     .avocationBox {
         width: 350px;
-        height: 10vh;
+        height: 10px;
         margin: 0 auto;
     }
+    
 }
 
 /* Small screens (phones, below 768px) */
