--- a/src/app/avocations/avocation.css
+++ b/src/app/avocations/avocation.css
@@ -1,13 +1,22 @@
+body,
+html {
+    overflow-x: hidden;
+    max-width: 100vw;
+    max-height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
 .grid {
-    height: 70vh;
+    max-width: 100vw;
+    overflow-x: hidden;
     display: grid;
     grid-template-columns: 45% 45% 5%;
-    gap: 4%;
+    gap: 2%;
     align-items: stretch;
 }
 
 .single-image-container {
-    position: relative;
     width: 100%;
     height: 100%;
     overflow-y: auto;
@@ -24,7 +33,7 @@
 .info-container {
     display: grid;
     gap: 10px;
-    height: 80vh;
+    height: 50vh;
     width: max-content;
     overflow-y: auto;
     position: relative;
@@ -38,13 +47,14 @@
     display: grid;
 }
 
-.line{
+.line {
     margin-bottom: 20px;
 }
 
 .shining-line {
     display: block;
     width: 100%;
+    margin-left: 34px;
     height: 3px;
     background: linear-gradient(90deg, rgba(255, 0, 150, 0.7), rgba(0, 204, 255, 0.7));
     background-size: 300% 300%;
@@ -97,16 +107,19 @@
     .grid {
         grid-template-columns: 45% 45% 5%;
     }
+
     .avocation-image {
         width: 70vh;
         height: 75vh;
     }
+
     .info-container {
-        
+
         margin: 0 auto;
         height: 60vh;
         width: 80vh;
     }
+
     .shining-line {
         width: 51vh;
     }
@@ -115,43 +128,69 @@
 /* Large screens (desktops, between 1200px and 1399px) */
 @media (max-width: 1399px) and (min-width: 1200px) {
     .grid {
-        grid-template-columns: 50% 45%;
+        grid-template-columns: 45% 45% 10%;
+        max-width: 100%;
     }
+
     .avocation-image {
-        width: 90vh;
+        width: 60vh;
         height: 40vh;
     }
+
     .info-container {
-        height: 40vh;
+        height: 50vh;
     }
 }
 
 /* Medium screens (tablets, between 768px and 1199px) */
 @media (max-width: 1199px) and (min-width: 768px) {
-    
     .grid {
-        grid-template-columns: 100%;
+        grid-template-columns: 45% 45% 10%;
+        grid-template-rows: auto;
+        gap: 1%;
+        max-width: 100vw;
+        overflow: hidden;
     }
-    
+
+    .avocation-image {
+        width: 100%;
+        height: auto;
+    }
+
     .info-container {
         height: 65vh;
+        width: 100%;
+        margin: 0 auto;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+
+    .shining-line {
+        width: 69%;
+        margin-left: 25px;
+        height: 3px;
     }
 }
+
 
 /* Small screens (phones, below 768px) */
 @media (max-width: 767px) {
     .grid {
-        grid-template-columns: 70%;
-        grid-row: 1fr;
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
         gap: 1%;
+        max-width: 100vw;
     }
+
     .avocation-image {
         margin-top: 20px;
         width: 80%;
         height: 30vh;
     }
+
     .info-container {
         margin-top: 13px;
         height: 32vh;
+        width: 100%;
     }
 }
