--- a/src/app/component/avocationComp.css
+++ b/src/app/component/avocationComp.css
@@ -65,7 +65,7 @@
     .avocationBox {
         width: max-content;
         max-width: 320px;
-        margin: 25px;
+        margin: 0 10px;
     }
 
     .header h3 {
