Css for breakpoints in home is not accurate

--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -142,8 +142,9 @@ body {
         display: none;
     }
 
-    .body {
-        height: 100vh;
+    .main{
+        width: max-content;
+        
     }
 
     .main-container {
